[package]
name = "dow"
description = "Tomohiko Sakamoto's algorithm for finding the day of the week"
version = "0.1.3"
license = "MIT"
readme = "README.md"
authors = ["Daniel Lockyer <thisisdaniellockyer@gmail.com>"]
repository = "https://github.com/neosilky/dow"
homepage = "https://github.com/neosilky/dow"
keywords = ["sakamoto", "day", "week", "no-std"]

[badges]
travis-ci = { repository = "neosilky/dow" }
